Increase base version number to 1.9.0
Increases the VERSION_NUMBER_DEFAULT to 1.9.x and adds a new entry in the
changelog for the next version.

Review-URL: https://codereview.appspot.com/265460043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,7 +60,9 @@ The Dr. Memory distribution contains the following:
 \section sec_changes Changes Since Prior Releases
 
 The current version is \TOOL_VERSION.
-The changes between \TOOL_VERSION and version 1.8.0 include:
+The changes between \TOOL_VERSION and version 1.9.0 include:
+
+The changes between version 1.9.0 and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
  - Added Dr. Fuzz, a fuzz testing framework that facilitates repeated
    execution of any program function while mutating the arguments.
