i#1412: report error on jump to unaddressable memory
Adds reporting of an error of type "UNADDRESSABLE ACCESS: executing ..."
for execution from invalid memory, whether in a new basic block or on
receipt of a page fault.  This is under a new on-by-default option
-check_pc.

Adds a new test "badjmp".

Fixes #1412

Review-URL: https://codereview.appspot.com/271660043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -61,6 +61,8 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.9.0 include:
+ - Added checking that the program counter points to valid memory,
+   controlled by the on-by-default -check_pc option.
 
 The changes between version 1.9.0 and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
