i#1838: add new option -malloc_callstacks
Adds a new option -malloc_callstacks to obtain malloc information for
mismatch errors when leaks are disabled (e.g., in light mode).
Unfortunately, the performance cost is enough that this option is off by
default.

Adds a new test that runs cs2bug with "-light -malloc_callstacks" and
ensures we get the "memory was allocated here" messages.

Adds a note to mismatch error reports that a re-run with -malloc_callstacks
will add the alloc callstack.

Fixes #1838

Review-URL: https://codereview.appspot.com/277560043

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -71,6 +71,10 @@ The changes between \TOOL_VERSION and version 1.9.0 include:
    an argv-style array of parameters, to better support custom mutators.
  - Added checking that the program counter points to valid memory,
    controlled by the on-by-default -check_pc option.
+ - Added a new option -malloc_callstacks for recording malloc callstacks
+   to include in alloc/free error reports when leaks are disabled.
+   The option is off by default due to the additional overhead that
+   it incurs.
 
 The changes between version 1.9.0 and version 1.8.0 include:
  - Added support for Mac OSX Yosemite.
