i#1843 dictionary mutation: add dictionary mutation to drfuzz
Adds dictionary token-based mutation support to Dr. Fuzz and Dr. Memory:

Adds a new Dr. Memory option -fuzz_dictionary.
Adds corresponding Dr. Fuzz options -unit token and -dictionary.
Adds documentation of these options and of the dictionary file format,
which matches the AFL format.
Changes the default mutation algorithm to "random" for dictionary-based
fuzzing.

Adds dictionary parsing code, which supports binary tokens by
storing each token in a variable-sized struct inside a drvector.

Adds a new file drfuzz_shared.h for DRFUZZ_LOG() and other shared defines.

Adds token-based mutation, which follows the simple corpus-based approach
of AFL and other fuzzers: we do not try to parse the input buffer into
tokens or have any mapping from an internal buffer to the input buffer.
Instead, we simply insert a token from the dictionary into the input
buffer as our mutation, picking the token and its insertion point at random
for the random algorithm.  We do insert whitespace around it, assuming that
spaces are proper delimiters.

Renames MUTATOR_FLAG_BITFLIP_SEED_CENTRIC to MUTATOR_FLAG_SEED_CENTRIC as
it also applies to tokens.

Adds dictionary tests to drfuzz_client_mutator and to the Dr. Memory
fuzz_buffer set of tests.

Fixes #1843

Review-URL: https://codereview.appspot.com/280650043

--- a/drfuzz/drfuzz.dox
+++ b/drfuzz/drfuzz.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2014-2015 Google, Inc.   All rights reserved.
+ * Copyright (c) 2014-2016 Google, Inc.   All rights reserved.
  * **********************************************************/
 
 /*
@@ -100,20 +100,23 @@ drfuzz_mutator_start()):
  - -alg &lt;algorithm_name&gt;<br>
    Specifies the algorithm for generating a new value.  The choices are:
    - "random": Randomly search the domain of possible permutations.
+     This is the default for -unit token.
    - "ordered": Exhaustively search all possible permutations in an ordered
-     manner.  This is the default;
+     manner.  This is the default for -unit bits and -unit num.
 
  - -unit &lt;unit_name&gt;<br>
    Specifies the unit of transformation for applying the mutation algorithm.
    The choices are:
    - "bits": Bitwise application of the mutation algorithm.  This is the default.
    - "num": Numeric application of the mutation algorithm.
+   - "token": Insertion of tokens from a dictionary.  The dictionary must
+     be specified via -dictionary.
 
  - -flags &lt;int&gt;<br>
    Flags for the mutator. Some flags are specific to a particular algorithm and/or
    mutation unit.  The choices are:
    - 0x1: Reset the buffer contents to the input_seed after every bit-flip
-     mutation. Only valid for MUTATOR_UNIT_BITS. On by default.
+     mutation. Not valid for -unit num. On by default.
    - 0x2: Seed the mutator's random number generator with the current clock time.
 
  - -sparsity &lt;int&gt;<br>
@@ -130,6 +133,22 @@ drfuzz_mutator_start()):
    Set the randomization seed for algorithm "random".
    The default random seed is 0x5a8390e9a31dc65fULL, which was selected to
    have an equal number of 0 and 1 bits.
+
+ - -dictionary &lt;path&gt;<br>
+   Specifies a dictionary file containing tokens for -unit token.
+   The file format is compatible with AFL (http://lcamtuf.coredump.cx/afl/).
+   It is a text file with one token, in double quotes, per line, with an
+   optional preceding name followed by an equals sign.
+   Non-printable characters must use \\x hex escapes, and double quotes and
+   backslashes must be escaped by a preceding backslash.
+   Comment lines starting with '#' can be included.
+   An example:
+     \code
+     "token42"
+     "different_token"
+     unprint="\xCD\xEF"
+     mytokA="internal\"quotes\""
+     \endcode
 
 The default options are for ordered, seed-centric bit-flipping.
 
